--- a/_content.scss
+++ b/_content.scss
@@ -4,7 +4,9 @@ div#content{
 		background-color:#f3f2e9;
 		padding:80px 0;
 	}
-
+	section.margin-delivery{
+		margin-bottom:0px !important;
+	}
 	section#atelie-menu{
 		margin-bottom: 100px;
 
@@ -77,16 +79,15 @@ div#content{
 		}
 
 		div.tab-content{
-			div.tab-pane{
-				text-align: left;
-
-				article{
-					padding:20px 0;
-					border-bottom:1px solid #e5e5e5;
-					min-height: 153px;
-				}
-			}
 			
+			text-align: left;
+
+			article{
+				padding:20px 0;
+				border-bottom:1px solid #e5e5e5;
+				min-height: 153px;
+			}
+
 		}
 	
 	}
