--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
           list-style-type: none; }
           #page #header div.header-menu nav ul.menu-principal li a {
             display: inline-block;
-            padding: 10px 25px; }
+            padding: 10px 19px; }
           #page #header div.header-menu nav ul.menu-principal li a:hover {
             text-decoration: none; }
         #page #header div.header-menu nav ul.menu-principal li:hover {
@@ -321,6 +321,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   #page div#content section#atelie {
     background-color: #f3f2e9;
     padding: 80px 0; }
+  #page div#content section.margin-delivery {
+    margin-bottom: 0px !important; }
   #page div#content section#atelie-menu {
     margin-bottom: 100px; }
     #page div#content section#atelie-menu ul.btn-atelie {
@@ -371,9 +373,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
         background-color: #dfd99a; }
       #page div#content section#atelie-menu ul.btn-cardapio li:last-child {
         margin-right: 0; }
-    #page div#content section#atelie-menu div.tab-content div.tab-pane {
+    #page div#content section#atelie-menu div.tab-content {
       text-align: left; }
-      #page div#content section#atelie-menu div.tab-content div.tab-pane article {
+      #page div#content section#atelie-menu div.tab-content article {
         padding: 20px 0;
         border-bottom: 1px solid #e5e5e5;
         min-height: 153px; }
